fix jump issue in the about page

--- a/src/components/LandingPage/AboutMe/AboutMe.module.css
+++ b/src/components/LandingPage/AboutMe/AboutMe.module.css
@@ -64,7 +64,6 @@
 
   border-top: 1px solid #222229;
   border-bottom: 1px solid #222229;
-  border: 4px solid red;
 }
 
 .imageWrapper {
